# MAPs

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  documentation_base.md  documentation_generator.py  documentation_sandbox_base.md  launch_game.py  optuna_studies.db  package-lock.json  package.json  pyproject.toml  vite.config.js
map_backend/: Dockerfile  config.js  grid.js  park.js  research.js  server.js  utils.js
map_backend/node_utils/: dynamo_db.js  logger.js  s3.js
map_backend/people/: guest.js  person.js  staff.js
map_backend/routes/: guest.js  index.js  leaderboard.js  park.js  ride.js  shop.js  staff.js
map_backend/tiles/: ride.js  shop.js  tile.js
map_py/: helpers.py  human_agent.py  mini_amusement_park.py  shared_constants.py
shared/: action_spec.json  config.json  config.yaml  coords.json  documentation.md  documentation_action_space.md  documentation_sandbox.md  documentation_sandbox_action_space.md  guest_enums.json  guest_enums.yaml  sandbox_action_spec.json
terraform/: .gitignore  alb.tf  asg.tf  backend.tf  cloudwatch.tf  ec2.tf  ecr.tf  iam.tf  main.tf  outputs.tf  security_groups.tf  storage.tf  terraform-outputs.json  terraform.tfvars.example  tfplan  tfplan-https  user_data_asg.sh  variables.tf  vpc.tf
tests/: run_all_tests.js  test_click_handler.js  test_config.py  test_game_state_listener.js  test_mini_amusement_park.js  test_research.js
website/: Dockerfile  README.md  package-lock.json  package.json  setup-dev.sh  svelte.config.js  tailwind.config.js  vite.config.ts
(+103 files in other folders)
